# llm-judge-workshop

./: .env.example  CLAUDE.md  README.md  llm_judge_evals.ipynb  pyproject.toml
data/: labeled_traces.jsonl
