[project]
name = "llm-judge-workshop"
version = "0.1.0"
description = "Workshop: LLM-as-Judge evaluation with Bayesian correction"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.0.0",
    "judgy>=0.1.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
